Update to use new default JVM args from 26.1